# strainOptimizer

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
ETFLdesigner/: README.md  __init__.py
ETFLdesigner/analysis/: enzyme_variety_analysis.py  flux_variety_analysis.py  mainFunction.py  model_process.py  optimal_yield.py  protein_process.py
ETFLdesigner/io/: ecModel.py
ETFLdesigner/manipulation/: mainFunction.py  model_process.py
ETFLdesigner/simulation/: FBA.py  ecYeastFlux.py  optimal_production.py  pFBA.py  pprotFBA.py
data/: 2-PE_exp_targets  Sce_met_rxn_diGraph.pkl  compartment_annotation_refine.xlsx  gene_pathway_dict.json  get_geneNames.py  heme_experimental_data.xlsx  products_pathway_targets.json  s288c_geneNames.csv  slim_Sce_met_rxn_diGraph.pkl  spermidine_exp_data.xlsx
data/experiment_targets/: 2-phenylethanol_exp_targets.tsv  README.md  ecoli_tryptophan_exp_targets.tsv  ergothioneine_exp_targests.tsv  ffa_exp_targets.tsv  heme_exp_targets.tsv  sclareol_exp_targets.tsv  spermidine_exp_targets.tsv  yeast_xylose_3HP_exp_targets.tsv
data/yeast_thermo/: build_lexicon_for_ecmodel.py  ecYeast_lexicon.csv  yeast9_lexicon.csv  yeast_lexicon.csv
etfl/core/: carbohydrate.py  dna.py  genes.py  ion.py  lipid.py  rna.py
etfl/io/: dict.py
etfl/optim/: variables.py
examples/: 0.Add QHS sythetic process to ecGEM.py  0.add_sclareol_pathway.py  0.build_heme_ETFL_model.py  1.basic_tutorial.py  1.ecFactory_core_etfl_test.py  1.ecFactory_design_ecoli.py  1.ecFactory_design_example.ipynb  1.ecFactory_ecYeast_test.py  1.ecFactory_etfl_test.py  1.ecFactory_test_new.py  1.example_for_new_framwork.py  1.sclareol_prediction.py  2.ecFSEOF_design_example.ipynb  2.ecFactory_sclareol_design_example.ipynb  2.ecoli_core_test_ecfactory.py  2.ecoli_core_test_ecfseof.py  2.parse_sclareol_predict_result.py  Add QHS sythetic process to ecGEM.py  GA.py  GIMME.py  README.md  auto_remove_DS_file.py  build_heme_ETFL_model.py  build_met_rxn_graph_from_GEM.py  compare_strain_algorithms.py  define_inspiration_index.py  ecFactory_ecYeast_test.py  ecYeast_ecFSEOF_2PE&heme_test.py  ecYeast_ecFSEOF_2PE_test.py  ecYeast_ecFactory_2PE_test.py  ecYeast_ecFactory_heme_test.py  iBridge.py  model_growth_simulation.py  plot_envelope.py  prediction_result_evaluation.py  pyTFA.py  pymoo.py  sclareol_prediction.py  test_MOPA_MOMA.py  test_cEFL.py  (+17 more)
examples/ARCHIVE/: test_cEFL.py  test_core_model.py  yefl_ecFactory_2PE_test.py  yefl_ecFactory_heme_test.py
examples/ETFL_tutorials/: 1.basic_tutorial.py  2.gene_modification.py  3.concentration_predict.py  4.add_reaction.py  5.update_kcat.py  6.change_total_protein_constraint.py
examples/data/: ecoli_core_succinate_ecFactory.csv  predicted_protein_abundance.xlsx  sce_growth_data.csv
examples/ecmodel_tutorials/: add_new_enzyme_into_prot_pool.py
examples/result/: abundance_before_and_after_MOMA.xlsx  core_model_abundance.xlsx  ecYeast_2-phenylethanol_gluc_10_ecFactory_result.xlsx  ecYeast_2-phenylethanol_gluc_1_ecFactory_result.xlsx  ecYeast_heme_a_gluc_1_ecFSEOF_result.xlsx  ecYeast_heme_a_gluc_1_ecFactory_result.xlsx  enzyme_fva_core_model.xlsx  first_generation.txt  first_generation_result.xlsx  first_generation_select.txt  predicted_and_measured_proteomics.xlsx  solution_for_core_ecoli.xlsx  test_moma.xlsx  yefl_2-phenylethanol_gluc_10_ecFactory_result.xlsx  yefl_2-phenylethanol_gluc_1_ecFactory_result.xlsx  yefl_2-phenylethanol_gluc_5_ecFactory_result.xlsx  yefl_heme a_gluc_1_ecFactory_result.xlsx
examples/results/: 2-phenylethanol_design_results_ecFactory_fcc_result.xlsx  2-phenylethanol_design_results_ecFactory_level_1_result.xlsx  2-phenylethanol_design_results_ecFactory_level_2_result.xlsx  2-phenylethanol_design_results_ecFactory_level_3_result.xlsx  3HP_xylose_design_results_ecFactory_combined_result.xlsx  3HP_xylose_design_results_ecFactory_fcc_result.xlsx  3HP_xylose_design_results_ecFactory_level_2_result.xlsx  3HP_xylose_design_results_ecFactory_level_3_result.xlsx  Tryptophan_design_results_ecFactory_combined_result.xlsx  Tryptophan_design_results_ecFactory_fcc_result.xlsx  Tryptophan_design_results_ecFactory_level_1_result.xlsx  Tryptophan_design_results_ecFactory_level_2_result.xlsx  Tryptophan_design_results_ecFactory_level_3_result.xlsx
examples/siwei_heme_FSEOF/: ecYeastGEM.xlsx  flux_check.xlsx  genesResults_ecFSEOF.xlsx  haoyu.xlsx  haoyu_k_score_check.xlsx  haoyu_k_score_check_manual.xlsx  heme enhance targets prediction.py  heme production enhance targets.xlsx  k_matrix.xlsx  result_compare.py  v_matrix.xlsx  y8.mat
paper_analysis_code/: 0.calculate_proteome_cost.py  0.calculate_the_distance_between_wt_mutant.py  0.find_biosynthesis_pathway_rxnList.py  0.fseof_prediction.py  0.supply_target_analysis_for_geneTable.py  1.1 simulation_ecGEM_vs_EFL_model.py  1.2 integrate_result_ecGEM_EFL.py  2.organelle_level_resource_allocation_evaluation.ipynb  2.simulation_add_organelle_level_resource_constraint.py  3.2.GAN_model_prediction.py  3.simulation_moma_mopa_ppfba_pfba.py  4.evaluation_ecGEM_vs_EFL.ipynb  4.evaluation_organelle_proteome_constraint.ipynb  4.evaluation_pFBA_ppFBA_moma_mopa.ipynb  5.extend_usability_test_ecoli.py  5.extend_usability_test_xylose.py  sce_organelle_proteome_fractions.csv
paper_analysis_code/figures/: figure1.ipynb  figure3.ipynb  figure4.ipynb  figure5.ipynb
paper_analysis_code/results/: 3HP_xylose_consistency_summary.xlsx  ecGEM_organelle_proteome_constraint_evaluation.csv  ecGEM_vs_EFL_result.csv  flux_foldchange_distribution.csv  moma_vs_mopa_vs_pfba_vs_ppfba.csv  moma_vs_mopa_vs_pfba_vs_ppfba_allproducts_performance.csv  sce_enzyme_mass_fraction.csv  (+7 more)
strainOptimizer/: README.md  __init__.py  io.py
tests/: 1.compare_EUVA_ecModel_vs_etfl.py  2.check_total_enzme_amount.py  3.saturate_enzyme_usage.py  4.construct_mutant_etfl.py  5.etfl_test.py  README.md
(+214 files in other folders)
