[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strainOptimizer"
version = "0.1.0"
description = "A tool for rational cell factory design utilizting ecModels and multi-scale model."
readme = "README.md"
authors = [
    {name = "Hongzhong Lu", email = "your_email@example.com"}
]
license = {text = "MIT"}


[tool.setuptools.packages.find]
where = ["src"]